__snapshots__/test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchJSON assertion error has a nice output 1`] = `
expect(received).toMatchJSON(expected) 

- Expected  - 1
+ Received  + 2

  Object {
-   "foo": "baz",
+   "foo": "bar",
+   "spam": "eggs",
  }
`;

exports[`toMatchJSON assertion error has a nice output 2`] = `
expect(received).not.toMatchJSON(expected) 

Expected: not {"foo": "bar", "spam": "eggs"}
`;

exports[`toMatchJSON assertion error has a nice output 3`] = `
expect(received).not.toMatchJSON(expected) 

Expected: not {"foo": Anything, "spam": "eggs"}
Received:     {"foo": "bar", "spam": "eggs"}
`;

exports[`toMatchJSON throws on invalid JSON 1`] = `
expect(received).toMatchJSON(expected)

Matcher error: received value must be a valid JSON string

Received has value: null
`;

exports[`toMatchJSON throws on invalid JSON 2`] = `
expect(received).toMatchJSON(expected)

Matcher error: received value must be a valid JSON string. 

Received: ""
`;

exports[`toMatchJSON throws on invalid JSON 3`] = `
expect(received).toMatchJSON(expected)

Matcher error: received value must be a valid JSON string. Unexpected end of string

Received: "fals"
               ^

`;

exports[`toMatchJSON throws on invalid JSON 4`] = `
expect(received).toMatchJSON(expected)

Matcher error: received value must be a valid JSON string. Unexpected token: r

Received: "falsr"
               ^

`;

exports[`toMatchJSON throws on invalid JSON 5`] = `
expect(received).toMatchJSON(expected)

Matcher error: received value must be a valid JSON string. Unexpected token: '

Received: "fals'"
               ^

`;

exports[`toMatchJSON throws on invalid JSON 6`] = `
expect(received).toMatchJSON(expected)

Matcher error: received value must be a valid JSON string. Unexpected number: 9

Received: "fals9"
               ^

`;
